Closed Bug 111702 Opened 23 years ago Closed 22 years ago

`No' is not the opposite of `Accept'

Categories

(SeaMonkey :: Installer, defect, P4)

x86
Windows 95

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.2alpha

People

(Reporter: mpt, Assigned: Biesinger)

Details

Attachments

(2 files, 1 obsolete file)

Build: 0.9.6, Windows 95 To reproduce: 1. Start the stub installer. 2. Click `Next'. 3. Look at the buttons at the bottom of the license agreement panel. What you see: * `Accept' * `No' What you should see: * `Accept' * `Decline'
Target Milestone: --- → M1
Target Milestone: M1 → Future
taking, have patch
Severity: normal → minor
Priority: -- → P4
Target Milestone: Future → mozilla1.2alpha
Assignee: syd → cbiesinger
really taking this time
Attached patch patch (obsolete) — Splinter Review
Comment on attachment 92554 [details] [diff] [review] patch you're missing a change to config.it where there's a text that mentions the "No". You will need to update the text too. The text is in the following section in config.it: [Dialog License] Message1=
Attachment #92554 - Flags: needs-work+
Attached patch patch v2Splinter Review
Attachment #92554 - Attachment is obsolete: true
rudman, is the change of the wording suggested in this bug ok with you?
Comment on attachment 92557 [details] [diff] [review] patch v2 r=ssu the code change looks good. I'm no docs person, but the string change looks fine too.
Attachment #92557 - Flags: review+
os/2 might need such a change too, cc'ing mkaply
Status: NEW → ASSIGNED
dveditz, could you sr this patch?
we'll have to update the ns tree too else this check in will break it. Curt, could update the ns tree?
Comment on attachment 92557 [details] [diff] [review] patch v2 sr=dveditz
Attachment #92557 - Flags: superreview+
Okay, I'll get it into the ns tree.
Comment on attachment 92557 [details] [diff] [review] patch v2 a=asa (on behalf of drivers) for checkin to 1.1
Attachment #92557 - Flags: approval+
ok, checked my patch in. so curt, you have now the honorable task to fix the ns tree :)
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
I'm going to piggyback the ns fix off this bug if that is okay.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment on attachment 93441 [details] [diff] [review] Patch 1 for ns r=ssu
Attachment #93441 - Flags: review+
Sean, you're quick. Still need an sr=, though.
Assignee: cbiesinger → curt
Status: REOPENED → NEW
Reassigning a fixed bug will only mess up folks trying to do stats.
Assignee: curt → cbiesinger
Comment on attachment 93441 [details] [diff] [review] Patch 1 for ns sr=dveditz for the ns patch (but it should have gone in a separate bug rather than reopen someone else's).
Attachment #93441 - Flags: superreview+
This bug is fixed. There is a related commercial problem that isn't, but that's not this bug.
Status: NEW → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
Opened bugscape bug #16868 for the commercial fix.
Oops, type. I meant: Opened bugscape bug #18568 for the commercial fix.
Okay, somone rescue me. That was still wrong. It is bugscape bug #18586. Really.
verified on trunk and branch
Status: RESOLVED → VERIFIED
QA Contact: bugzilla → gbush
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: