bug 111702 r=ssu sr=dveditz a=asa `No' is not the opposite of `Accept'